# GCP

./: .pre-commit-config.yaml  README.md
.github/workflows/: cloud_run_deploy.yml  deploy.yml  terraform_deploy.yml  workflow.yaml  workflow_deploy.yml
cloud-run/my-cloud-run/: .pre-commit-config.yaml  Dockerfile  README.rst  pyproject.toml  requirements.txt
cloud-run/my-cloud-run/my_cloud_run/: main.py
cloud-run/my-cloud-run/src/: main.py
cloud-run/my-cloud-run/tests/: test_my_cloud_run.py
cloud-workflows/my-workflow/: pyproject.toml  workflow.yaml
cloud-workflows/my-workflow/.github/workflows/: deploy.yml
cloud-workflows/my-workflow/terraform/: main.tf
cloud-workflows/my-workflow/tests/: test_my_workflow.py
dataflow/batch-dataflow/: README.txt  env.yaml  local_file.csv  main.py  main_basic.py
dataflow/streaming-dataflow/fixed-window/: env.yaml  main.py  publisher.py  requirements.txt  table_schema.json
dataflow/streaming-dataflow/fixed-window/terraform/: main.tf  provider.tf  terraform.tfvars
dataflow/streaming-dataflow/fixed-window/terraform/.terraform/: terraform.tfstate
dbt/jaffle_shop/: README.md  dbt_project.yml
dbt/jaffle_shop/dbt-data-quality/: dq.py  requirements.txt
dbt/jaffle_shop/models/: data_source.yml
dbt/jaffle_shop/models/staging/: schema.yml
dbt/jaffle_shop/seeds/: raw_customers.csv  raw_orders.csv  rules.csv
dbt/jaffle_shop/tests/: assert_payment_count.sql
dbt/my-dbt/: README.md  pyproject.toml
terraform/: main.tf  provider.tf  variables.tf
terraform/main/: backend.config  terraform.tfvars
