[tool.poetry]
name = "my-cloud-run"
version = "0.1.0"
description = ""
authors = ["prasad-sawant1 <“prasad.sawant1@ingka.com”>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
beautifulsoup4 = "4.10.0"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.scripts]
#entry = "my_cloud_run.main:start"