[tool.poetry]
name = "my-dbt"
version = "0.1.0"
description = ""
authors = ["prasad-sawant1 <“prasad.sawant1@ingka.com”>"]
readme = "README.md"
packages = [{include = "my_dbt"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
